--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
 	<h1>Bienbenido a la web de este estudio fotográfico</h1>
 	<h2>Esta página donde veremos nuestros trabajos</h2>
 </body>
+	<script type="text/javascript" src="js/index.js"></script>
 </html>
